# bouwer

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  reusable-build.yml
src/: builder.rs  cache.rs  client.rs  clone.rs  config.rs  containers.rs  data.rs  device.rs  domain.rs  main.rs  profiles.rs  ssh.rs  state.rs
tests/: overview.json  versions.json
ui/: about.slint  appwindow.slint  builderlist.slint  combobox.slint  device.slint  imagebutton.slint  notification.slint  tooltip.slint
