[package]
name = "bouwer"
version = "0.1.0"
authors = ["George Sapkin <george@sapk.in>"]
description = "OpenWrt firmware builder GUI"
edition = "2024"

[dependencies]
anyhow = "1.0"
bollard = "0.20"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }
futures-util = "0.3"
i-slint-backend-winit = "1.15"
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.15", default-features = false, features = ["backend-winit", "compat-1-2", "renderer-skia"] }
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "time",
] }
ureq = { version = "3", features = ["json"] }
webbrowser = { version = "1.2.0", features = ["disable-wsl", "hardened"]}

[build-dependencies]
slint-build = "1.15"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
