[package]
name = "bouwer"
version = "0.2.0"
authors = ["George Sapkin <george@sapk.in>"]
description = "OpenWrt firmware builder GUI"
license = "GPL-3.0-only"
readme = "README.md"
edition = "2024"

[dependencies]
anyhow = "1.0"
bollard = "0.20"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }
futures-util = "0.3"
human_bytes = { version = "0.4", default-features = false }
i-slint-backend-winit = "1.15"
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "time",
] }
ureq = { version = "3", features = ["json"] }
webbrowser = { version = "1.2.0", features = ["disable-wsl", "hardened"]}

# Native Linux or Windows
[target.'cfg(any(target_os = "linux", target_env = "msvc"))'.dependencies]
slint = { version = "1.15", default-features = false, features = ["backend-winit", "compat-1-2", "renderer-skia"] }

# Cross-compile Windows from Linux
[target.'cfg(all(target_os = "windows", target_env = "gnu"))'.dependencies]
slint = { version = "1.15", default-features = false, features = ["backend-winit", "compat-1-2", "renderer-software"] }

[build-dependencies]
slint-build = "1.15"
winresource = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[package.metadata.winresource]
ProductName = "Bouwer"
FileDescription = "Bouwer - OpenWrt firmware builder"
LegalCopyright = "Copyright © 2026 George Sapkin"
OriginalFilename = "bouwer.exe"
